kube/controller-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: workspaceai-api-prefix
  namespace: workspaceai-prod
spec:
  stripPrefix:
    prefixes:
      - /api
