kube/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspaceai-api
  namespace: workspaceai-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspaceai-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: workspaceai-api
    spec:
      containers:
        - name: workspaceai-api
          image: carlosblanco1/workspaceai-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 90
