kube/db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: workspaceai-postgres-ss
  namespace: workspaceai-prod
spec:
  serviceName: workspaceai-postgres-svc
  replicas: 1

  selector:
    matchLabels:
      app:  workspaceai-postgres-ss

  template:
    metadata:
      labels:
        app:  workspaceai-postgres-ss

    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg16
          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: workspaceai-postgres-pvc
