kube/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspaceai-front
  namespace: workspaceai-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspaceai-front
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: workspaceai-front
    spec:
      containers:
        - name: workspaceai-front
          image: carlosblanco1/workspaceai-front:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
