kube/ollama-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: workspaceai-ollama
    namespace: workspaceai-prod
spec:
    replicas: 1
    selector:
        matchlabels:
            app: workspaceai-ollama
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    template:
        metadata:
            labels:
                app: workspaceai-ollama
        spec:
            containers:
                - name: ollama
                image: ollama/ollama
                ports:
                    - containerPort: 11434
                volumeMounts:
                    - name: ollama-data
                    mountPath: /root/.ollama

            volumes:
                - name: ollama-data
                persistentVolumeClaim:
                    claimName: workspaceai-ollama-pvc
