kube/api-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: workspaceai-api-svc
    namespace: workspaceai-prod
spec:
    selector:
        app: workspaceai-api
    ports:
     - protocol: TCP
       port: 8080
       targetPort: 8080
    type: ClusterIP
