kube/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: workspaceai-postgres-svc
  namespace: workspaceai-prod
spec:
  type: ClusterIP
  selector:
    app:  workspaceai-postgres-ss

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
