kube/front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: workspaceai-front-svc
  namespace: workspaceai-prod
spec:
  selector:
    app: workspaceai-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
